Add column userEditor, router getall and updateUser with userEditor
