# src/routes/index.ts
@@ -1,10 +1,11 @@
 import express from 'express';
 import {sessionRouter} from "./Sessions.routes";
+import usersRoutes from "./Users.routes";
 
 const routes = express.Router();
 
-routes.use('/sessins', sessionRouter);
-routes.use('/users', sessionRouter);
-routes.use('/posts', sessionRouter);
-routes.use('/comments', sessionRouter);
+routes.use('/auth', sessionRouter);
+routes.use('/users', usersRoutes);
+// routes.use('/posts', sessionRouter);
+// routes.use('/comments', sessionRouter);
 export default routes;
